# open-food-facts-data-quality-case-study

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/sample/: openfoodfacts_sample.jsonl
docs/: assumptions_and_limitations.md  cleaning_decisions.md  data_dictionary.md  methodology.md
notebooks/: 01_exploratory_analysis.ipynb
reports/: data_quality_report.md
sql/: analysis_queries.sql  create_tables.sql  quality_checks.sql
src/: __init__.py  clean_data.py  db.py  download_data.py  generate_figures.py  generate_report.py  profile_data.py  validate_data.py
tests/: test_validation.py
